--- a/mybbs/templates/registration/login.html
+++ b/mybbs/templates/registration/login.html
@@ -36,6 +36,6 @@
         <p style="margin-top: 10px">如果你没有账号<a href="{% url 'account:user_register' %}">注册用户</a> </p>
     </div>
     <script>
-        $('input').addClass('input-sm')
+        $('input').addClass('input')
     </script>
 {% endblock content %}
