--- a/mybbs/templates/base.html
+++ b/mybbs/templates/base.html
@@ -31,7 +31,7 @@
 
     <!-- 默认表单的输入框 -->
     <script>
-        $('input').addClass('input-sm')
+        $('input').addClass('input')
     </script>
 </body>
 </html>
