debug false solve the slugify issus

--- a/mybbs/templates/article/column/redit_article.html
+++ b/mybbs/templates/article/column/redit_article.html
@@ -70,7 +70,7 @@ function redit_article(){
                 layer.msg("successful");
                 location.href = "{% url 'article:article_list' %}"; 
             }else{
-                layer.msg("sorry."); 
+                layer.msg("sorry2"."); 
             }
         }, 
     });
